Added Bootstrap and styled form

--- a/moviedb/app/views/movies/new.html.erb
+++ b/moviedb/app/views/movies/new.html.erb
@@ -1,24 +1,29 @@
-<h1>Add a new movie</h1>
-
-<%= form_for @movie do |f| %>
-
-<p>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-</p>
-<p>
-    <%= f.label :rating %>
-    <%= f.text_field :rating %>
-</p>
-<p>
-    <%= f.label :year %>
-    <%= f.text_field :year  %>
-</p>
-<p>
-    <%= f.label :description %>
-    <%= f.text_area :description  %>
-</p>
-<p>
-    <%= f.submit %>
-</p>
-<% end %>
+<div class="panel-heading">
+    <h1 class="panel-title">Add a new movie</h1>    
+    </div>
+    <div class="panel-body">
+    
+        
+        <%= form_for @movie do |f| %>
+        
+        <div class="form-group">
+            <%= f.label :title %>
+            <%= f.text_field :title, :class => 'form-control' %>
+        </div>
+        <div class="form-group">
+            <%= f.label :rating %>
+            <%= f.text_field :rating, :class => 'form-control' %>
+        </div>
+        <div class="form-group">
+            <%= f.label :year %>
+            <%= f.text_field :year , :class => 'form-control' %>
+        </div>
+        <div class="form-group">
+            <%= f.label :description %>
+            <%= f.text_area :description, :class => 'form-control'  %>
+        </div>
+        <div class="form-group">
+            <%= f.submit nil, :class => 'btn btn-primary' %>
+        </div>
+        <% end %>    
+    </div>
