--- a/moviedb/app/views/layouts/application.html.erb
+++ b/moviedb/app/views/layouts/application.html.erb
@@ -7,8 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <div class="panel panel-default">
+        <%= yield %>  
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
