Catching up, adding navbar

--- a/moviedb/app/views/movies/index.html.erb
+++ b/moviedb/app/views/movies/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Movies!!</h1>
 
+<table class="table">
+    <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+    </tr>
+</table>
