--- a/moviedb/app/views/movies/index.html.erb
+++ b/moviedb/app/views/movies/index.html.erb
@@ -7,4 +7,13 @@
         <th></th>
         <th></th>
     </tr>
+    <% for @movie as |movie| %>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <% end %>
+    
 </table>
