Added error display for new Movie form

--- a/moviedb/app/views/movies/new.html.erb
+++ b/moviedb/app/views/movies/new.html.erb
@@ -5,7 +5,16 @@
     
         
         <%= form_for @movie do |f| %>
-        
+        <% if @movie.errors.any? %>
+            <div class="alert alert-danger">
+                <p>The following <%= 'error'.pluralize(@movie.errors.size) %> prevented this movie from being saved:</p>
+                <ul>
+                    <% @movie.errors.full_messages.each do |msg| %>
+                        <li><%= msg %></li>
+                    <% end %>
+                </ul>
+            </div>
+        <% end %>
         <div class="form-group">
             <%= f.label :title %>
             <%= f.text_field :title, :class => 'form-control' %>
