Added delete and edit functions.  Created form partial

--- a/moviedb/app/views/movies/edit.html.erb
+++ b/moviedb/app/views/movies/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="panel-heading">
-    <h1 class="panel-title">Add a new movie</h1>    
+    <div class="panel-title">Edit Movie</div>
 </div>
 <div class="panel-body">
     <%= render 'form' %>
