--- a/moviedb/app/views/movies/index.html.erb
+++ b/moviedb/app/views/movies/index.html.erb
@@ -7,12 +7,14 @@
         <th></th>
         <th></th>
     </tr>
-   
+   <% @movies.each do |movie| %>
     <tr>
+        <td><%= link_to movie.title, movie %> </td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
+        <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
+        <td><%= link_to 'Delete', movie_path(movie), method: :delete, data: {confirm: "Are you sure you want to delete #{movie.title}?" } %></td>
     </tr>
+    <% end %>
     
 </table>
