--- a/moviedb/app/views/layouts/application.html.erb
+++ b/moviedb/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
       <ul class="nav navbar-nav">
         <li><%= link_to 'Movies', movies_path %></li>
         <li><%= link_to 'Add Movie', new_movie_path %></li>
+        <li><%= link_to 'Actors', actors_path %></li>
+        <li><%= link_to 'Add Actor', new_actor_path %></li>
+        
       </ul>
     </div>
   </nav>
